welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: Missing closing brace `}' assumed here
var nbPas:Int = 0 ;
^